// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TimelineQueueButtonHeader /> renders correctly 1`] = `
<div
  className="left-1/2 -translate-x-1/2 fixed top-20 z-50 hidden"
>
  <a
    className="flex items-center bg-primary-600 hover:bg-primary-700 hover:scale-105 active:scale-100 transition-transform text-white rounded-full px-4 py-2 space-x-1.5 cursor-pointer"
    onClick={[Function]}
  >
    <div
      className="svg-icon"
    >
      <svg
        id={
          Object {
            "process": [Function],
          }
        }
      />
    </div>
  </a>
</div>
`;

exports[`<TimelineQueueButtonHeader /> renders correctly 2`] = `
<div
  className="left-1/2 -translate-x-1/2 fixed top-20 z-50 hidden"
>
  <a
    className="flex items-center bg-primary-600 hover:bg-primary-700 hover:scale-105 active:scale-100 transition-transform text-white rounded-full px-4 py-2 space-x-1.5 cursor-pointer"
    onClick={[Function]}
  >
    <div
      className="svg-icon"
    >
      <svg
        id={
          Object {
            "process": [Function],
          }
        }
      />
    </div>
    <p
      className="text-sm text-inherit font-normal tracking-normal font-sans"
      style={null}
    >
      Click to see 1 new post
    </p>
  </a>
</div>
`;

exports[`<TimelineQueueButtonHeader /> renders correctly 3`] = `
<div
  className="left-1/2 -translate-x-1/2 fixed top-20 z-50 hidden"
>
  <a
    className="flex items-center bg-primary-600 hover:bg-primary-700 hover:scale-105 active:scale-100 transition-transform text-white rounded-full px-4 py-2 space-x-1.5 cursor-pointer"
    onClick={[Function]}
  >
    <div
      className="svg-icon"
    >
      <svg
        id={
          Object {
            "process": [Function],
          }
        }
      />
    </div>
    <p
      className="text-sm text-inherit font-normal tracking-normal font-sans"
      style={null}
    >
      Click to see 9999999 new posts
    </p>
  </a>
</div>
`;
